Fix sign-out popup not visible on mobile
Made-with: Cursor

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -280,6 +280,10 @@ header {
     }
   }
 
+  &:has(.user-info.is-open) {
+    overflow: visible;
+  }
+
   &.is-mobile-open {
     height: initial;
     max-height: initial;
